Add `javabuilder_data` and `turbine_data` attributes to `java_toolchain`
corresponding to `javabuilder_jvm_opts` and `turbine_jvm_opts`, to allow
tool-specific inputs. Currently the only way to specify additional inputs is
with the shared `tools` attribute, which means the Class Data Sharing archives
for JavaBuilder and Turbine are both passed when invoking either tool.

Also refactor the handling of the tool-specific inputs into
'JavaToolchainTool', which encapsulates the deploy jars, jvm flags, and data
inputs for each tool.

Also, stop hard-coding `-X:verifyNone` in a couple of places. It's explicitly
configured in our `java_toolchain`, and hard-coding it in Bazel was never
a good idea (see e.g. https://github.com/bazelbuild/bazel/issues/11381).

PiperOrigin-RevId: 346151606